<resources>
    <string name="app_name">Family Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email_label">email@gmail.com</string>
    <string name="firstName_label">First Name</string>
    <string name="lastName_label">Last Name</string>
    <string name="gender_label">Gender m/f</string>
    <string name="username_string">username</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="settings_life_story">Life Story Lines</string>
    <string name="settings_show_life_story">SHOW LIFE STORY LINES</string>
    <string name="settings_family_tree">Family Tree Lines</string>
    <string name="settings_show_family">SHOW FAMILY TREE LINES</string>
    <string name="settings_spouse_lines">Spouse Lines</string>
    <string name="settings_show_spouse">SHOW SPOUSE LINES</string>
    <string name="settings_father_side">Father\'s Side</string>
    <string name="settings_filter_father">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="settings_mothers_side">Mother\'s Side</string>
    <string name="settings_filter_mother">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="settings_male_events">Male Events</string>
    <string name="settings_female_events">Female Events</string>
    <string name="settings_filter_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_show_logout">RETURN TO LOGIN SCREEN</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="next">Next</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>